feat(product-service): add dto paging validation and optimistic locking