@@ -1,11 +1,24 @@
 package com.example.product.service;
 
+import com.example.product.dto.ProductCreateRequest;
+import com.example.product.dto.ProductPageResponse;
+import com.example.product.dto.ProductResponse;
+import com.example.product.exception.BadRequestException;
+import com.example.product.exception.ConflictException;
+import com.example.product.exception.ForbiddenException;
+import com.example.product.exception.NotFoundException;
 import com.example.product.model.Product;
 import com.example.product.repository.ProductRepository;
 import jakarta.transaction.Transactional;
+import org.springframework.dao.OptimisticLockingFailureException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Locale;
 import java.util.UUID;
 
 @Service
@@ -20,22 +33,82 @@ public class ProductService {
     // =========================
     // CREATE PRODUCT (SELLER / ADMIN)
     // =========================
-    public Product create(Product product, String userRole) {
-        validateProductInput(product);
+    public ProductResponse create(ProductCreateRequest request, String userRole) {
         validateCreatorRole(userRole);
-        return repository.save(product);
+        String normalizedName = request.getName().trim();
+
+        Product product = new Product();
+        product.setName(normalizedName);
+        product.setPrice(request.getPrice());
+        product.setStock(request.getStock());
+
+        return toResponse(repository.save(product));
     }
 
     // =========================
     // QUERY
     // =========================
-    public List<Product> findAll() {
-        return repository.findAll();
+    public ProductPageResponse findAll(
+            int page,
+            int size,
+            String sortBy,
+            String sortDir,
+            String name,
+            Double minPrice,
+            Double maxPrice,
+            Integer minStock,
+            Integer maxStock
+    ) {
+        validateRange(minPrice, maxPrice, "price");
+        validateRange(minStock, maxStock, "stock");
+
+        String normalizedSortBy = normalizeSortBy(sortBy);
+        Sort.Direction direction = normalizeSortDirection(sortDir);
+
+        PageRequest pageRequest = PageRequest.of(
+                page,
+                size,
+                Sort.by(direction, normalizedSortBy)
+        );
+
+        Specification<Product> spec = Specification.where(null);
+        if (name != null && !name.isBlank()) {
+            String keyword = "%" + name.trim().toLowerCase(Locale.ROOT) + "%";
+            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("name")), keyword));
+        }
+        if (minPrice != null) {
+            spec = spec.and((root, query, cb) -> cb.greaterThanOrEqualTo(root.get("price"), minPrice));
+        }
+        if (maxPrice != null) {
+            spec = spec.and((root, query, cb) -> cb.lessThanOrEqualTo(root.get("price"), maxPrice));
+        }
+        if (minStock != null) {
+            spec = spec.and((root, query, cb) -> cb.greaterThanOrEqualTo(root.get("stock"), minStock));
+        }
+        if (maxStock != null) {
+            spec = spec.and((root, query, cb) -> cb.lessThanOrEqualTo(root.get("stock"), maxStock));
+        }
+
+        Page<Product> result = repository.findAll(spec, pageRequest);
+        List<ProductResponse> items = result.getContent().stream().map(this::toResponse).toList();
+
+        return new ProductPageResponse(
+                items,
+                result.getNumber(),
+                result.getSize(),
+                result.getTotalElements(),
+                result.getTotalPages(),
+                normalizedSortBy,
+                direction.name(),
+                result.hasNext(),
+                result.hasPrevious()
+        );
     }
 
-    public Product findById(UUID id) {
+    public ProductResponse findById(UUID id) {
         return repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .map(this::toResponse)
+                .orElseThrow(() -> new NotFoundException("PRODUCT_NOT_FOUND", "Product not found"));
     }
 
     // =========================
@@ -44,54 +117,99 @@ public class ProductService {
     @Transactional
     public void checkAndDecreaseStock(UUID productId, int quantity) {
         if (quantity <= 0) {
-            throw new IllegalArgumentException("Quantity must be greater than 0");
+            throw new BadRequestException("INVALID_QUANTITY", "Quantity must be greater than 0");
         }
 
-        int updatedRows = repository.decreaseStock(productId, quantity);
-        if (updatedRows == 0) {
-            throw new IllegalArgumentException("Product not found or insufficient stock");
+        Product product = repository.findById(productId)
+                .orElseThrow(() -> new NotFoundException("PRODUCT_NOT_FOUND", "Product not found"));
+
+        if (product.getStock() < quantity) {
+            throw new BadRequestException("INSUFFICIENT_STOCK", "Product not found or insufficient stock");
+        }
+
+        product.setStock(product.getStock() - quantity);
+        try {
+            repository.saveAndFlush(product);
+        } catch (OptimisticLockingFailureException ex) {
+            throw new ConflictException("STOCK_UPDATE_CONFLICT", "Concurrent stock update detected. Please retry.");
         }
     }
 
     @Transactional
     public void increaseStock(UUID productId, int quantity) {
         if (quantity <= 0) {
-            throw new IllegalArgumentException("Quantity must be greater than 0");
+            throw new BadRequestException("INVALID_QUANTITY", "Quantity must be greater than 0");
         }
 
-        int updatedRows = repository.increaseStock(productId, quantity);
-        if (updatedRows == 0) {
-            throw new IllegalArgumentException("Product not found");
+        Product product = repository.findById(productId)
+                .orElseThrow(() -> new NotFoundException("PRODUCT_NOT_FOUND", "Product not found"));
+        product.setStock(product.getStock() + quantity);
+        try {
+            repository.saveAndFlush(product);
+        } catch (OptimisticLockingFailureException ex) {
+            throw new ConflictException("STOCK_UPDATE_CONFLICT", "Concurrent stock update detected. Please retry.");
         }
     }
 
     private void validateCreatorRole(String userRole) {
         if (userRole == null || userRole.isBlank()) {
-            throw new SecurityException("Missing user role");
+            throw new ForbiddenException("MISSING_ROLE", "Missing user role");
         }
 
         if (!"SELLER".equalsIgnoreCase(userRole) && !"ADMIN".equalsIgnoreCase(userRole)) {
-            throw new SecurityException("Only SELLER or ADMIN can create product");
+            throw new ForbiddenException("ROLE_NOT_ALLOWED", "Only SELLER or ADMIN can create product");
         }
     }
 
-    private void validateProductInput(Product product) {
-        if (product == null) {
-            throw new IllegalArgumentException("Product payload is required");
+    private void validateRange(Number min, Number max, String fieldName) {
+        if (min != null && max != null && min.doubleValue() > max.doubleValue()) {
+            throw new BadRequestException(
+                    "INVALID_RANGE",
+                    "min" + capitalize(fieldName) + " must be less than or equal to max" + capitalize(fieldName)
+            );
         }
+    }
 
-        if (product.getName() == null || product.getName().trim().isEmpty()) {
-            throw new IllegalArgumentException("Product name is required");
+    private String normalizeSortBy(String sortBy) {
+        if (sortBy == null || sortBy.isBlank()) {
+            return "createdAt";
         }
+        return switch (sortBy) {
+            case "name", "price", "stock", "createdAt" -> sortBy;
+            default -> throw new BadRequestException(
+                    "INVALID_SORT_FIELD",
+                    "sortBy must be one of: name, price, stock, createdAt"
+            );
+        };
+    }
 
-        if (product.getPrice() == null || product.getPrice() <= 0) {
-            throw new IllegalArgumentException("Product price must be greater than 0");
+    private Sort.Direction normalizeSortDirection(String sortDir) {
+        if (sortDir == null || sortDir.isBlank()) {
+            return Sort.Direction.DESC;
         }
-
-        if (product.getStock() == null || product.getStock() < 0) {
-            throw new IllegalArgumentException("Product stock must be greater than or equal to 0");
+        if ("asc".equalsIgnoreCase(sortDir)) {
+            return Sort.Direction.ASC;
         }
+        if ("desc".equalsIgnoreCase(sortDir)) {
+            return Sort.Direction.DESC;
+        }
+        throw new BadRequestException("INVALID_SORT_DIRECTION", "sortDir must be either asc or desc");
+    }
 
-        product.setName(product.getName().trim());
+    private ProductResponse toResponse(Product product) {
+        return new ProductResponse(
+                product.getId(),
+                product.getName(),
+                product.getPrice(),
+                product.getStock(),
+                product.getCreatedAt()
+        );
+    }
+
+    private String capitalize(String value) {
+        if (value == null || value.isBlank()) {
+            return value;
+        }
+        return value.substring(0, 1).toUpperCase(Locale.ROOT) + value.substring(1);
     }
 }
